GNOME Bugzilla – Bug 698370
Abusing log out and log in crashes the system
Last modified: 2013-07-30 12:58:06 UTC
After several log in and log out, the system crash The system have reach the number max of X server avril 19 05:32:05 localhost /etc/gdm/Xsession[9507]: Window manager warning: Log level 16: gnome-shell: Fatal IO error 0 (Success) on X server :5. .... avril 19 05:32:05 localhost gdm[476]: GdmDisplay: display lasted 0.010407 seconds avril 19 05:32:05 localhost gdm[476]: GdmLocalDisplayFactory: maximum number of X display failures reached: check X server log for errors
Created attachment 242209 [details] [review] un watch bus when log out Fix: unwatch bus when user logs out
Created attachment 250464 [details] [review] display: actually set slave_name_id and unwatch bus name in unmanage slave_name_id is supposed to track the bus name watch of the slave, but it was never getting set. This commit sets it, and makes sure the watch is removed in unmanage.
thanks, pushed with minor changes. Attachment 250464 [details] pushed as 95975ad - display: actually set slave_name_id and unwatch bus name in unmanage