display: actually set slave_name_id and unwatch bus name in unmanage

slave_name_id is supposed to track the bus name watch of the slave, but
it was never getting set.

This commit sets it, and makes sure the watch is removed in unmanage.

https://bugzilla.gnome.org/show_bug.cgi?id=698370